# SE-Project

./: CMakeLists.txt  ExoPlanets.csv  README.md  run_server_windows.bat  testplanets.csv
backend/: CMakeLists.txt
backend/data/: ExoPlanets.csv
backend/src/: DataProcessing.cpp
backend/tests/: tests.cpp
backend/users/: accounts.txt
backend/users/favorites/: benDavidson.txt
data/: testplanets.csv
frontend/SystemUI/: CEN3031.pde  Planet.pde  UI.pde  Vars.pde  sketch.properties
src/: DataProcessing.cpp  DataProcessing.h  Planet.cpp  Planet.h  main.cpp
tests/: tests.cpp
users/: accounts.txt
